// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-lxfwny soui-divider-wrapper cjifng5 soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-lxfwny soui-divider-wrapper cjifng5 soui-divider-horizontal c-lp2hjw soui-divider-with-text c-nc2fvr soui-divider-with-text-center"
  >
    <span
      class="ce2jqr6 soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-lxfwny soui-divider-wrapper cjifng5 soui-divider-horizontal c-lp2hjw soui-divider-with-text c-a7x0l1 soui-divider-with-text-left"
  >
    <span
      class="ce2jqr6 soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-lxfwny soui-divider-wrapper cjifng5 soui-divider-horizontal c-lp2hjw soui-divider-with-text c-wlly5k soui-divider-with-text-right"
  >
    <span
      class="ce2jqr6 soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
